sql/src/test/resources/drill/window/queries/negative/q10.res
0\t
UNSUPPORTED_OPERATION ERROR: DISTINCT for window aggregate functions is not currently supported
See Apache Drill JIRA: DRILL-3182
